# PortHannis

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  app.go  go.mod  main.go  old_tasks.md  port.json  run.bat  setup-env.sh  tasks.md  wails.json
.github/workflows/: ci.yml  release.yml
config/: manager.go  types.go
core/: Cargo.toml
core/src/: config.rs  error.rs  forwarder.rs  lib.rs  logger.rs  manager.rs  models.rs
core/src/api/: control.rs  entries.rs  logs.rs  mod.rs
forwarder/: engine.go  logger.go  rule.go
frontend/: index.html  package-lock.json  package.json  package.json.md5  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  App.tsx  app.css  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ConfirmDialog.tsx  EmptyState.tsx  Layout.tsx  LogViewer.svelte  LogViewer.tsx  LoginForm.svelte  RuleForm.svelte  RuleItem.svelte  Sidebar.tsx  StatusBadge.tsx  Toast.tsx
frontend/src/hooks/: useEntries.ts  useLogs.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  EntryForm.tsx  EntryList.tsx  LogPage.tsx
frontend/wailsjs/go/main/: App.d.ts  App.js
gui/: Cargo.toml  tauri.conf.json
gui/capabilities/: default.json
gui/src/: lib.rs  main.rs
packaging/linux/: build-gui.sh  build-headless.sh  port-hannis.desktop
packaging/windows/: build.ps1
server/: Cargo.toml  core.rs  web.html
server/src/: main.rs
tray/: tray.go
webui/: api.go  auth.go  server.go  ws.go
