[workspace]
resolver = "2"
members = ["core", "server", "gui"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# http
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# embedding
rust-embed = "8"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
directories = "6"

# cli
clap = { version = "4", features = ["derive", "env"] }

# tauri (only in gui/)
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

# dev
tempfile = "3"
