[workspace]
resolver = "2"
members = ["server", "gui"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# http
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

# cli
clap = { version = "4", features = ["derive", "env"] }

# misc
anyhow = "1"
opener = "0.7"
rust-embed = "8"

# tauri
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
