[package]
name = "porthannis-core"
edition.workspace = true
version.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
directories.workspace = true
tower-http.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tempfile.workspace = true
