[package]
name = "porthannis-gui"
edition.workspace = true
version.workspace = true

[lib]
name = "porthannis_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
porthannis-core = { path = "../core" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tauri.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
directories.workspace = true
tauri-plugin-shell = "2"
