[package]
name = "porthannis-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "porthannis_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tauri.workspace = true
