[package]
name = "porthannis-server"
edition.workspace = true
version.workspace = true

[[bin]]
name = "porthannis"
path = "src/main.rs"

[dependencies]
porthannis-core = { path = "../core" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
rust-embed.workspace = true
clap.workspace = true
tracing.workspace = true
mime_guess = "2"
anyhow = "1"
directories.workspace = true
