[package]
name = "porthannis-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "porthannis"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
opener.workspace = true
